tests/baselines/reference/comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.errors.txt
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(2,12): error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(6,12): error TS2564: Property 'b' has no initializer and is not definitely assigned in the constructor.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(31,12): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(31,17): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(32,12): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(32,17): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(33,12): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(33,17): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(34,12): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(34,17): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(35,12): error TS2454: Variable 'a5' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(35,17): error TS2454: Variable 'b5' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(36,12): error TS2454: Variable 'a6' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(36,17): error TS2454: Variable 'b6' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(39,12): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(39,17): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(40,12): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(40,17): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(41,12): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(41,17): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(42,12): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(42,17): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(43,12): error TS2454: Variable 'b5' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(43,17): error TS2454: Variable 'a5' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(44,12): error TS2454: Variable 'b6' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(44,17): error TS2454: Variable 'a6' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(48,12): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(48,17): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(49,12): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(49,17): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(50,12): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(50,17): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(51,12): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(51,17): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(52,12): error TS2454: Variable 'a5' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(52,17): error TS2454: Variable 'b5' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(53,12): error TS2454: Variable 'a6' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(53,17): error TS2454: Variable 'b6' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(56,12): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(56,17): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(57,12): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(57,17): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(58,12): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(58,17): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(59,12): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(59,17): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(60,12): error TS2454: Variable 'b5' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(60,17): error TS2454: Variable 'a5' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(61,12): error TS2454: Variable 'b6' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(61,17): error TS2454: Variable 'a6' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(65,12): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(65,18): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(66,12): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(66,18): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(67,12): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(67,18): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(68,12): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(68,18): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(69,12): error TS2454: Variable 'a5' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(69,18): error TS2454: Variable 'b5' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(70,12): error TS2454: Variable 'a6' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(70,18): error TS2454: Variable 'b6' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(73,12): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(73,18): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(74,12): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(74,18): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(75,12): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(75,18): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(76,12): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(76,18): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(77,12): error TS2454: Variable 'b5' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(77,18): error TS2454: Variable 'a5' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(78,12): error TS2454: Variable 'b6' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(78,18): error TS2454: Variable 'a6' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(82,12): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(82,18): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(83,12): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(83,18): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(84,12): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(84,18): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(85,12): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(85,18): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(86,12): error TS2454: Variable 'a5' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(86,18): error TS2454: Variable 'b5' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(87,12): error TS2454: Variable 'a6' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(87,18): error TS2454: Variable 'b6' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(90,12): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(90,18): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(91,12): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(91,18): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(92,12): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(92,18): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(93,12): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(93,18): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(94,12): error TS2454: Variable 'b5' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(94,18): error TS2454: Variable 'a5' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(95,12): error TS2454: Variable 'b6' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(95,18): error TS2454: Variable 'a6' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(99,12): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(99,18): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(100,12): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(100,18): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(101,12): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(101,18): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(102,12): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(102,18): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(103,12): error TS2454: Variable 'a5' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(103,18): error TS2454: Variable 'b5' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(104,12): error TS2454: Variable 'a6' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(104,18): error TS2454: Variable 'b6' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(107,12): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(107,18): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(108,12): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(108,18): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(109,12): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(109,18): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(110,12): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(110,18): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(111,12): error TS2454: Variable 'b5' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(111,18): error TS2454: Variable 'a5' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(112,12): error TS2454: Variable 'b6' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(112,18): error TS2454: Variable 'a6' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(116,12): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(116,18): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(117,12): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(117,18): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(118,12): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(118,18): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(119,12): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(119,18): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(120,12): error TS2454: Variable 'a5' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(120,18): error TS2454: Variable 'b5' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(121,12): error TS2454: Variable 'a6' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(121,18): error TS2454: Variable 'b6' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(124,12): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(124,18): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(125,12): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(125,18): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(126,12): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(126,18): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(127,12): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(127,18): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(128,12): error TS2454: Variable 'b5' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(128,18): error TS2454: Variable 'a5' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(129,12): error TS2454: Variable 'b6' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(129,18): error TS2454: Variable 'a6' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(133,12): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(133,19): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(134,12): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(134,19): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(135,12): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(135,19): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(136,12): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(136,19): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(137,12): error TS2454: Variable 'a5' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(137,19): error TS2454: Variable 'b5' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(138,12): error TS2454: Variable 'a6' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(138,19): error TS2454: Variable 'b6' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(141,12): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(141,19): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(142,12): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(142,19): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(143,12): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(143,19): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(144,12): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(144,19): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(145,12): error TS2454: Variable 'b5' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(145,19): error TS2454: Variable 'a5' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(146,12): error TS2454: Variable 'b6' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(146,19): error TS2454: Variable 'a6' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(150,12): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(150,19): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(151,12): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(151,19): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(152,12): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(152,19): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(153,12): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(153,19): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(154,12): error TS2454: Variable 'a5' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(154,19): error TS2454: Variable 'b5' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(155,12): error TS2454: Variable 'a6' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(155,19): error TS2454: Variable 'b6' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(158,12): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(158,19): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(159,12): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(159,19): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(160,12): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(160,19): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(161,12): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(161,19): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(162,12): error TS2454: Variable 'b5' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(162,19): error TS2454: Variable 'a5' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(163,12): error TS2454: Variable 'b6' is used before being assigned.
comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts(163,19): error TS2454: Variable 'a6' is used before being assigned.


==== comparisonOperatorWithSubtypeObjectOnInstantiatedConstructorSignature.ts (194 errors) ====
    class Base {
        public a: string;
               ~
!!! error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
    }
    
    class Derived extends Base {
        public b: string;
               ~
!!! error TS2564: Property 'b' has no initializer and is not definitely assigned in the constructor.
    }
    
    var a1: { new <T>(x: T): T };
    var b1: { new (x: string): string };
    
    var a2: { new <T>(x: T): T };
    var b2: { new (x: string, y: number): string };
    
    var a3: { new <T, U>(x: T, y: U): T };
    var b3: { new (x: string, y: number): string };
    
    var a4: { new <T>(x?: T): T };
    var b4: { new (x?: string): string };
    
    var a5: { new <T>(...x: T[]): T };
    var b5: { new (...x: string[]): string };
    
    var a6: { new <T>(x: T, y: T): T };
    var b6: { new (x: string, y: number): {} };
    
    //var a7: { new <T, U extends T>(x: T, y: U): T };
    var b7: { new (x: Base, y: Derived): Base };
    
    // operator <
    var r1a1 = a1 < b1;
               ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
    var r1a2 = a2 < b2;
               ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
    var r1a3 = a3 < b3;
               ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
    var r1a4 = a4 < b4;
               ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
    var r1a5 = a5 < b5;
               ~~
!!! error TS2454: Variable 'a5' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'b5' is used before being assigned.
    var r1a6 = a6 < b6;
               ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'b6' is used before being assigned.
    //var r1a7 = a7 < b7;
    
    var r1b1 = b1 < a1;
               ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
    var r1b2 = b2 < a2;
               ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var r1b3 = b3 < a3;
               ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var r1b4 = b4 < a4;
               ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    var r1b5 = b5 < a5;
               ~~
!!! error TS2454: Variable 'b5' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a5' is used before being assigned.
    var r1b6 = b6 < a6;
               ~~
!!! error TS2454: Variable 'b6' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
    //var r1b7 = b7 < a7;
    
    // operator >
    var r2a1 = a1 > b1;
               ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
    var r2a2 = a2 > b2;
               ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
    var r2a3 = a3 > b3;
               ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
    var r2a4 = a4 > b4;
               ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
    var r2a5 = a5 > b5;
               ~~
!!! error TS2454: Variable 'a5' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'b5' is used before being assigned.
    var r2a6 = a6 > b6;
               ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'b6' is used before being assigned.
    //var r2a7 = a7 > b7;
    
    var r2b1 = b1 > a1;
               ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
    var r2b2 = b2 > a2;
               ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var r2b3 = b3 > a3;
               ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var r2b4 = b4 > a4;
               ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    var r2b5 = b5 > a5;
               ~~
!!! error TS2454: Variable 'b5' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a5' is used before being assigned.
    var r2b6 = b6 > a6;
               ~~
!!! error TS2454: Variable 'b6' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
    //var r2b7 = b7 > a7;
    
    // operator <=
    var r3a1 = a1 <= b1;
               ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
    var r3a2 = a2 <= b2;
               ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
    var r3a3 = a3 <= b3;
               ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
    var r3a4 = a4 <= b4;
               ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
    var r3a5 = a5 <= b5;
               ~~
!!! error TS2454: Variable 'a5' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b5' is used before being assigned.
    var r3a6 = a6 <= b6;
               ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b6' is used before being assigned.
    //var r3a7 = a7 <= b7;
    
    var r3b1 = b1 <= a1;
               ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
    var r3b2 = b2 <= a2;
               ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var r3b3 = b3 <= a3;
               ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var r3b4 = b4 <= a4;
               ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    var r3b5 = b5 <= a5;
               ~~
!!! error TS2454: Variable 'b5' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a5' is used before being assigned.
    var r3b6 = b6 <= a6;
               ~~
!!! error TS2454: Variable 'b6' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
    //var r3b7 = b7 <= a7;
    
    // operator >=
    var r4a1 = a1 >= b1;
               ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
    var r4a2 = a2 >= b2;
               ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
    var r4a3 = a3 >= b3;
               ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
    var r4a4 = a4 >= b4;
               ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
    var r4a5 = a5 >= b5;
               ~~
!!! error TS2454: Variable 'a5' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b5' is used before being assigned.
    var r4a6 = a6 >= b6;
               ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b6' is used before being assigned.
    //var r4a7 = a7 >= b7;
    
    var r4b1 = b1 >= a1;
               ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
    var r4b2 = b2 >= a2;
               ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var r4b3 = b3 >= a3;
               ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var r4b4 = b4 >= a4;
               ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    var r4b5 = b5 >= a5;
               ~~
!!! error TS2454: Variable 'b5' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a5' is used before being assigned.
    var r4b6 = b6 >= a6;
               ~~
!!! error TS2454: Variable 'b6' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
    //var r4b7 = b7 >= a7;
    
    // operator ==
    var r5a1 = a1 == b1;
               ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
    var r5a2 = a2 == b2;
               ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
    var r5a3 = a3 == b3;
               ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
    var r5a4 = a4 == b4;
               ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
    var r5a5 = a5 == b5;
               ~~
!!! error TS2454: Variable 'a5' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b5' is used before being assigned.
    var r5a6 = a6 == b6;
               ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b6' is used before being assigned.
    //var r5a7 = a7 == b7;
    
    var r5b1 = b1 == a1;
               ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
    var r5b2 = b2 == a2;
               ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var r5b3 = b3 == a3;
               ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var r5b4 = b4 == a4;
               ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    var r5b5 = b5 == a5;
               ~~
!!! error TS2454: Variable 'b5' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a5' is used before being assigned.
    var r5b6 = b6 == a6;
               ~~
!!! error TS2454: Variable 'b6' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
    //var r5b7 = b7 == a7;
    
    // operator !=
    var r6a1 = a1 != b1;
               ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
    var r6a2 = a2 != b2;
               ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
    var r6a3 = a3 != b3;
               ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
    var r6a4 = a4 != b4;
               ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
    var r6a5 = a5 != b5;
               ~~
!!! error TS2454: Variable 'a5' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b5' is used before being assigned.
    var r6a6 = a6 != b6;
               ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b6' is used before being assigned.
    //var r6a7 = a7 != b7;
    
    var r6b1 = b1 != a1;
               ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
    var r6b2 = b2 != a2;
               ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var r6b3 = b3 != a3;
               ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var r6b4 = b4 != a4;
               ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    var r6b5 = b5 != a5;
               ~~
!!! error TS2454: Variable 'b5' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a5' is used before being assigned.
    var r6b6 = b6 != a6;
               ~~
!!! error TS2454: Variable 'b6' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
    //var r6b7 = b7 != a7;
    
    // operator ===
    var r7a1 = a1 === b1;
               ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
    var r7a2 = a2 === b2;
               ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
    var r7a3 = a3 === b3;
               ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
    var r7a4 = a4 === b4;
               ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
    var r7a5 = a5 === b5;
               ~~
!!! error TS2454: Variable 'a5' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'b5' is used before being assigned.
    var r7a6 = a6 === b6;
               ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'b6' is used before being assigned.
    //var r7a7 = a7 === b7;
    
    var r7b1 = b1 === a1;
               ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
    var r7b2 = b2 === a2;
               ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var r7b3 = b3 === a3;
               ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var r7b4 = b4 === a4;
               ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    var r7b5 = b5 === a5;
               ~~
!!! error TS2454: Variable 'b5' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'a5' is used before being assigned.
    var r7b6 = b6 === a6;
               ~~
!!! error TS2454: Variable 'b6' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
    //var r7b7 = b7 === a7;
    
    // operator !==
    var r8a1 = a1 !== b1;
               ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
    var r8a2 = a2 !== b2;
               ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
    var r8a3 = a3 !== b3;
               ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
    var r8a4 = a4 !== b4;
               ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
    var r8a5 = a5 !== b5;
               ~~
!!! error TS2454: Variable 'a5' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'b5' is used before being assigned.
    var r8a6 = a6 !== b6;
               ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'b6' is used before being assigned.
    //var r8a7 = a7 !== b7;
    
    var r8b1 = b1 !== a1;
               ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
    var r8b2 = b2 !== a2;
               ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var r8b3 = b3 !== a3;
               ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var r8b4 = b4 !== a4;
               ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    var r8b5 = b5 !== a5;
               ~~
!!! error TS2454: Variable 'b5' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'a5' is used before being assigned.
    var r8b6 = b6 !== a6;
               ~~
!!! error TS2454: Variable 'b6' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
    //var r8b7 = b7 !== a7;